# variant_impedance_tracking_RL

./: CMakeLists.txt  LICENSE  Readme.md
converted_models/: network
parallel_sim/: CMakeLists.txt  a1_gym_env.cpp  a1_gym_env.h  eigen_model_from_file.hpp  eval_success_rate.cpp  eval_success_rate_1.cpp  parallel_sim.cpp  parallel_sim.h  param_loader.cpp  param_loader.h  py_interface.cpp  safe_queue.hpp  test.py  test_a1_env.cpp  test_parallel_env.cpp
python/: mujoco_a1.py  train.py
python/cfg/: config.yaml
python/cfg/task/: MujocoA1.yaml
python/cfg/train/: MujocoA1PPO.yaml
python/unitree_a1/: a1_torque.xml  a1_torque_view_collision.xml  cyberdog.xml  hfield.xml  hfield_2.xml  hfield_3.xml  hfield_torque.xml  scene_torque.xml
